<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="170dp"
    android:layout_height="wrap_content"
    android:layout_marginBottom="5dp">

    <ImageView
        android:id="@+id/iv_film"
        android:layout_width="match_parent"
        android:layout_height="255dp"
        android:contentDescription="@string/judul_film" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:orientation="vertical"
        android:layout_gravity="bottom"
        android:gravity="center_vertical"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:background="@drawable/item_background">
        <TextView
            android:id="@+id/tv_judul"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/judul_film"
            android:textColor="@color/white"
            android:textSize="17sp"
            android:textStyle="bold"
            android:singleLine="true"/>
        <TextView
            android:id="@+id/tv_tahun"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tahun"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:textStyle="bold"/>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_fav_button"
        android:layout_margin="3dp"
        android:layout_gravity="end">
        <ImageView
            android:id="@+id/iv_fav_film"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/ic_favorite_border_black"
            android:layout_gravity="end"
            android:layout_margin="3dp"
            android:contentDescription="@string/fav"/>

    </RelativeLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>